# Census

./: CMakeLists.txt  Census.cpp  Census.h  Copy_of_TensorFlow_with_GPU.ipynb  CreateOver18.cpp  CreatePopInfile.cpp  ElColl.cpp  ElColl.h  FixOverseas.cpp  Geoid.cpp  Geoid.h  census.ini  compare_mysql_to_csv.txt  create_apportion.sql  create_statenames.sql  ecoll.ini  ecoll18_plot.sh  ecoll_plot.sh  elcoll.gplt  elcoll.ini  elcoll18.gplt  elcoll_2018.gplt  histogram_help.txt  load_names.sql  tests.cpp  ward4_zips.txt
sql/: census_join.sql  create_est_over18.sql  create_overseas.sql  create_pop_est.sql  create_presidential_his.sql  load_over18.sql  load_overseas.sql  load_pop_est.sql
